Fix nav issue on mobile

--- a/client/app/scss/host.component.scss
+++ b/client/app/scss/host.component.scss
@@ -43,12 +43,14 @@
         color: #000000 !important;
         text-transform: none;
     }
-    .navbar-nav {
-        display: flex;
-        float: none;
-        justify-content: center;
-        li {
+    @media screen and (min-width: $mobile-breakpoint) {
+        .navbar-nav {
+            display: flex;
             float: none;
+            justify-content: center;
+            li {
+                float: none;
+            }
         }
     }
 }
